# Civic-Navigation-HEC-Hackathon

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
datasets/: Asaan Mobile Account.mhtml  Block Stolen_Lost Mobile Phones.mhtml  DVS _ Device Verification System.mhtml  FAQs.mhtml  SIM Information System.mhtml  fee-structure-id.mhtml
frontend/: ai-guide.html  locator.html  main-page.html  services.html
